refactor: streamline data processing and CSV export functionality